<resources>
    <string name="app_name">The Latest Music Scene</string>
    <string name="textTitle">Maroon 5 : Girls Like You</string>
    <string name="imageOne">imageOne</string>
    <string name="buttonOne">View Music Story</string>
    <string name="textTitleOne">Maroon 5 : She will be loved</string>
    <string name="imageTwo">imageTwo</string>
    <string name="buttonTwo">View Music Story</string>
    <string name="paraOne">\"Girls Like You\" is an upbeat love song in which Adam Levine shows his appreciation for his girl after overcoming a difficult time in their relationship. Adam Levine acknowledges that he and his girl need each other in their lives. Originally the ninth track on Maroon 5 s sixth studio album, Red Pill Blues, a remix featuring American rapper Cardi B, was released as a single on May 30, 2018. The revamped version leaves the original vocals and production intact before Cardi B slides in with her verse in the latter half of the song. The music video was filmed by American movie director David Dobkin, whose resumé includes the films Shanghai Knights, Wedding Crashers, and The Judge. He previously worked with Maroon 5 on their visuals for "Sugar" and "Don't Wanna Know." The revamped version leaves the original vocals and production intact before Cardi B slides in with her verse in the latter half of the song.</string>
    <string name="aboutOne">Story of the song</string>
    <string name="paraTwo">This is about a guy who has a best friend who is always someone else\'s girlfriend. He knows everything about her and she runs to him every time one of her relationships goes bad. He keeps saving her because he secretly loves her. He\'ll do anything for her even though she hurts him by leading him on. He\'s waiting for her to realize what a mistake she is making with all the other guys. The video, directed by Sophie Muller (\"This Love\"), is more of a story about a man who is dating the daughter of a rich man. The rich man is married to a younger woman (Kelly Preston) who is having a secret affair with lead singer Adam Levine. >> The album is named after Adam Levine\'s ex-girlfriend. He asked her permission to use the name. The album was produced by Faith No More\'s Matt Wallace. >> According to Teenmusic.com, Levine\'s girlfriend at the time, Kelly, was furious with Adam\'s love scenes with Preston, who was his favorite actress. </string>
</resources>
