<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MusicStoryOne" >

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4BFB00"
        android:gravity="center"
        android:paddingTop="@dimen/paddingTop_dp"
        android:paddingBottom="@dimen/paddingBottom_dp"
        android:text="@string/textTitle"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textTitle" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_bright"
        android:gravity="center"
        android:paddingTop="@dimen/paddingTop_dp"
        android:paddingBottom="@dimen/paddingBottom_dp"
        android:text="@string/aboutOne"
        android:textColor="@android:color/black"
        android:textSize="@dimen/about" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_light"
        android:paddingLeft="@dimen/paddingLeftRight_dp"
        android:paddingTop="@dimen/paddingTop_dp"
        android:paddingRight="@dimen/paddingLeftRight_dp"
        android:paddingBottom="@dimen/paddingBottom_dp"
        android:text="@string/paraOne"
        android:textColor="@android:color/black"
        android:textSize="@dimen/para" />
</LinearLayout>